Move towards more composable api [WIP]

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -5,11 +5,11 @@
     {
       "path": "./core/tsconfig.json"
     },
-    {
-      "path": "./react/tsconfig.json"
-    },
-    {
-      "path": "./example/tsconfig.json"
-    }
+//    {
+//      "path": "./react/tsconfig.json"
+//    },
+//    {
+//      "path": "./example/tsconfig.json"
+//    }
   ]
 }
