Rewriting react integration [WIP]

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -5,9 +5,9 @@
     {
       "path": "./core/tsconfig.json"
     },
-//    {
-//      "path": "./react/tsconfig.json"
-//    },
+    {
+      "path": "./react/tsconfig.json"
+    },
 //    {
 //      "path": "./example/tsconfig.json"
 //    }
