Fix all compile time errors

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -8,8 +8,8 @@
     {
       "path": "./react/tsconfig.json"
     },
-//    {
-//      "path": "./example/tsconfig.json"
-//    }
+    {
+      "path": "./example/tsconfig.json"
+    }
   ]
 }
