--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,8 @@
     "tiny-invariant": "^1.1.0"
   },
   "devDependencies": {
-    "performance-now": "^2.1.0"
+    "performance-now": "^2.1.0",
+    "type-fest": "^2.5.0"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
