--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,6 +10,11 @@
       "path": "../core/tsconfig.json"
     }
   ],
-  "include": ["./src"],
-  "exclude": ["./tests", "./lib"]
+  "include": [
+    "./src"
+  ],
+  "exclude": [
+    "./tests",
+    "./lib"
+  ]
 }
