--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,7 +24,7 @@ jobs:
 
       - run: yarn install
       - run: yarn build
-      - run: yarn test --coverage
+      - run: yarn test:coverage
 
       - uses: codecov/codecov-action@v1
         with:
