--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,7 +8,8 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "peerDependencies": {
-    "hardwired": "0.6.3"
+    "hardwired": "0.6.3",
+    "react": "^17.0.0"
   },
   "devDependencies": {
     "hardwired": "*"
