--- a/packages/example-wip/package.json
+++ b/packages/example-wip/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "hardwired": "*",
+    "mobx": "^6.3.13",
+    "mobx-react": "^7.2.1",
     "hardwired-react": "*",
     "@types/node": "^12.0.0",
     "@types/styled-components": "^5.1.5",
