--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "ts-expect": "^1.1.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
-    "typescript": "4.4.2"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
