--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "source-map-support": "^0.5.19",
     "ts-expect": "^1.1.0",
     "ts-jest": "^27.0.4",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.6.3"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.7.0-dev.20220503"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
