--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,11 +13,13 @@
   ],
   "version": "0.7.0",
   "dependencies": {
-    "tiny-invariant": "^1.1.0"
+    "tiny-invariant": "^1.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "performance-now": "^2.1.0",
-    "type-fest": "^2.5.0"
+    "type-fest": "^2.5.0",
+    "@types/uuid": "^8.3.4"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
