--- a/packages/react-example/package.json
+++ b/packages/react-example/package.json
@@ -8,14 +8,7 @@
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "hardwired-react": "*",
-    "@types/styled-components": "^5.1.5",
-    "parcel-bundler": "^1.12.4",
-    "react-draggable": "^4.4.3",
-    "redux-devtools-extension": "^2.13.8",
-    "redux": "^4.0.5",
-    "react-redux": "^7.2.2",
-    "styled-components": "^5.2.1",
-    "@reduxjs/toolkit": "^1.6.2"
+    "parcel-bundler": "^1.12.4"
   },
   "browserslist": {
     "production": [
@@ -40,10 +33,7 @@
     "lib",
     "README.md"
   ],
-  "devDependencies": {
-    "imitation": "^3.0.0",
-    "@types/react-redux": "^7.1.16"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "parcel public/index.html"
   }
