--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,7 +27,7 @@
     "react": "^17.0.0"
   },
   "devDependencies": {
-    "hardwired": "*"
+    "hardwired": "0.7.0"
   },
   "publishConfig": {
     "access": "public"
