Make jest work correctly with esm modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "NodeNext",
     "jsx": "react",
     "strict": true,
-    "removeComments": true
+    "removeComments": true,
+    "esModuleInterop": true
   }
 }
