--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
     "build": "tsc -b packages/tsconfig.json --pretty",
     "prepublishOnly": "rimraf packages/**/lib/*/__test__",
-    "test": "yarn run jest --config jest.config.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js",
     "test:coverage": "yarn run jest --config jest.config.js --selectProjects core react --coverage",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
     "update:tsconfig.json": "node --loader ts-node/esm scripts/update-package-tsconfig.ts",
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^4.2.5",
+    "imitation": "^3.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^11.1.2",
@@ -63,7 +64,7 @@
     "ts-expect": "^1.3.0",
     "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.7.0-dev.20220503"
+    "typescript": "^4.7.1-rc"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
