--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "private": true,
   "scripts": {
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
-    "build": "tsc -b packages/tsconfig.json --pretty",
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc -b packages/tsconfig.json --pretty",
+    "build:cjs": "tsc -b packages/tsconfig.cjs.json --pretty",
     "prepublishOnly": "rimraf packages/**/lib/*/__test__",
     "test": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js",
     "test:coverage": "yarn run jest --config jest.config.js --selectProjects core react --coverage",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
     "update:tsconfig.json": "node --loader ts-node/esm scripts/update-package-tsconfig.ts",
     "update:package.json": "node --loader ts-node/esm scripts/update-package-json.ts",
-    "purge": "rimraf packages/**/lib/* packages/**/*.tsbuildinfo",
+    "purge": "rimraf packages/**/dist/* packages/**/*.tsbuildinfo",
     "format": "prettier --write 'packages/**/src/**/*.{ts,tsx,js}'",
     "lint": "eslint 'packages/**/*.{!d.ts,ts,tsx}'"
   },
