--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,13 +14,15 @@
   ],
   "type": "module",
   "exports": {
-    "import": "./lib/index.js",
-    "types": "./lib/index.d.ts"
+    "default": "./dist/esm/index.js",
+    "import": "./dist/esm/index.js",
+    "types": "./dist/esm/index.d.ts",
+    "require": "./dist/cjs/index.js"
   },
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/cjs/index.d.ts",
   "files": [
-    "lib",
+    "dist",
     "README.md"
   ],
   "dependencies": {
