--- a/packages/core/tsconfig.cjs.json
+++ b/packages/core/tsconfig.cjs.json
@@ -1,15 +1,11 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.cjs.json",
   "compilerOptions": {
-    "outDir": "./dist/esm",
+    "outDir": "./dist/cjs",
     "rootDir": "./src",
     "composite": true
   },
-  "references": [
-    {
-      "path": "../core/tsconfig.json"
-    }
-  ],
+  "references": [],
   "exclude": [
     "./dist"
   ],
