--- a/packages/http-server-example-wip/package.json
+++ b/packages/http-server-example-wip/package.json
@@ -6,8 +6,18 @@
   "description": "Hardwired integration for React",
   "version": "0.7.0",
   "type": "module",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "exports": {
+    "default": "./dist/esm/index.js",
+    "import": "./dist/esm/index.js",
+    "types": "./dist/esm/index.d.ts",
+    "require": "./dist/cjs/index.js"
+  },
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/cjs/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "dependencies": {
     "hardwired": "*",
     "find-my-way": "*",
@@ -20,10 +30,6 @@
     "@types/node-fetch": "^2.6.1",
     "@types/url-join": "^4.0.1"
   },
-  "files": [
-    "lib",
-    "README.md"
-  ],
   "publishConfig": {
     "access": "public"
   },
