--- a/packages/react/tsconfig.cjs.json
+++ b/packages/react/tsconfig.cjs.json
@@ -1,13 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.cjs.json",
   "compilerOptions": {
-    "outDir": "./dist/esm",
+    "outDir": "./dist/cjs",
     "rootDir": "./src",
     "composite": true
   },
   "references": [
     {
-      "path": "../core/tsconfig.json"
+      "path": "../core/tsconfig.cjs.json"
     }
   ],
   "exclude": [
