--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc -b packages/tsconfig.json --pretty",
-    "build:cjs": "tsc -b packages/tsconfig.cjs.json --pretty",
-    "prepublishOnly": "rimraf packages/**/lib/*/__test__",
+    "build:cjs": "yarn build:cjs:core && yarn build:cjs:react",
+    "build:cjs:core": "cd packages/core && tsc --outDir ./dist/cjs --module commonjs",
+    "build:cjs:react": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
+    "build:cjs:clear": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
+    "prepublishOnly": "rimraf packages/**/dist/**/__test__/ packages/**/dist/*.tsbuildinfo",
     "test": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js",
     "test:coverage": "yarn run jest --config jest.config.js --selectProjects core react --coverage",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
