--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:cjs:clear": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
     "prepublishOnly": "rimraf packages/**/dist/**/__test__/ packages/**/dist/*.tsbuildinfo",
     "test": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js",
-    "test:coverage": "yarn run jest --config jest.config.js --selectProjects core react --coverage",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js --selectProjects core react --coverage",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
     "update:tsconfig.json": "node --loader ts-node/esm scripts/update-package-tsconfig.ts",
     "update:package.json": "node --loader ts-node/esm scripts/update-package-json.ts",
