Add task for removing type from all package.json files

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:cjs:core": "cd packages/core && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:react": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:clear": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
-    "prepublishOnly": "rimraf packages/**/dist/**/__test__/ packages/**/dist/*.tsbuildinfo",
+    "build:cjs:prepublish": "node --loader ts-node/esm scripts/prepublish.ts",
+    "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
     "test": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js",
     "test:coverage": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js --selectProjects core react --coverage",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
