--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "^4.2.5",
     "imitation": "^3.0.1",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^11.1.2",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
@@ -68,9 +68,9 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-expect": "^1.3.0",
-    "ts-jest": "^28.0.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.7.1-rc"
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
