--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,11 +14,10 @@
   ],
   "type": "module",
   "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "types": "./dist/esm/index.d.ts",
-      "require": "./dist/cjs/index.js"
-    }
+    "default": "./dist/esm/index.js",
+    "import": "./dist/esm/index.js",
+    "types": "./dist/esm/index.d.ts",
+    "require": "./dist/cjs/index.js"
   },
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
