--- a/package.json
+++ b/package.json
@@ -42,35 +42,34 @@
   },
   "devDependencies": {
     "@airbnb/node-memwatch": "^2.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^7.0.0",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/airbnb__node-memwatch": "^2.0.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.33",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
+    "@types/node": "^18.7.1",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "happy-dom": "^6.0.4",
     "husky": "^4.2.5",
     "imitation": "^3.0.1",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
+    "jsdom": "^20.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.6.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-expect": "^1.3.0",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.3",
+    "vitest": "^0.21.1",
+    "vite": "^3.0.5"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
