--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build:cjs:clear": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:prepublish": "node --loader ts-node/esm scripts/prepublish.ts",
     "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
-    "test": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules yarn run jest --config jest.config.js --selectProjects core react --coverage",
+    "test": "yarn run vitest --config ./vitest.config.ts --run",
+    "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
     "update:tsconfig.json": "node --loader ts-node/esm scripts/update-package-tsconfig.ts",
     "update:package.json": "node --loader ts-node/esm scripts/update-package-json.ts",
@@ -51,6 +51,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "c8": "^7.12.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -68,8 +69,8 @@
     "ts-expect": "^1.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.3",
-    "vitest": "^0.21.1",
-    "vite": "^3.0.5"
+    "vite": "^3.0.5",
+    "vitest": "^0.21.1"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
