--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ts-expect": "^1.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
+    "@vitest/coverage-c8": "^0.29.2",
     "vite": "^4.1.4",
     "vitest": "^0.29.2"
   },
