Exclude test files

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,12 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "!/**/__tests__",
+    "!/**/__test__",
+    "!/**/*.test.ts",
+    "!/**/*.test.tsx"
+
   ],
   "repository": {
     "type": "git",
