--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,12 +30,7 @@
   },
   "files": [
     "dist",
-    "README.md",
-    "!/**/__tests__",
-    "!/**/__test__",
-    "!/**/*.test.ts",
-    "!/**/*.test.tsx"
-
+    "README.md"
   ],
   "repository": {
     "type": "git",
