[WIP] Extract hydratable into separate package

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -15,6 +15,9 @@
       "path": "./http-server-example-wip/tsconfig.json"
     },
     {
+      "path": "./hydration/tsconfig.json"
+    },
+    {
       "path": "./react-example/tsconfig.json"
     }
   ]
