--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -14,10 +14,13 @@
   ],
   "type": "module",
   "exports": {
-    "default": "./dist/esm/index.js",
-    "import": "./dist/esm/index.js",
-    "types": "./dist/esm/index.d.ts",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "default": "./dist/esm/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts",
+      "require": "./dist/cjs/index.js"
+    },
+    "./polyfill": "./dist/esm/polyfill/async_hooks.js"
   },
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
