--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "./dist/esm",
     "rootDir": "./src",
     "composite": true,
-    "jsx": "react"
+    "jsx": "react",
+    "module": "es2022",
+    "target": "es2022"
   },
   "references": [
     {
