Add publishing of hooks and serializable packages

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -65,3 +65,15 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           package: packages/react/package.json
+
+      - name: Publish hooks addon
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/hooks/package.json
+
+      - name: Publish serializable addon
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/serializable/package.json
