Rename package dir

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc -b packages/tsconfig.json --pretty",
-    "build:cjs": "yarn build:cjs:core && yarn build:cjs:react",
+    "build:cjs": "yarn build:cjs:core && yarn build:cjs:react && yarn build:cjs:serializable",
     "build:cjs:core": "cd packages/core && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:react": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
-    "build:cjs:clear": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
+    "build:cjs:serializable": "cd packages/serializable && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:prepublish": "node --loader ts-node/esm scripts/prepublish.ts",
     "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
     "test": "yarn run vitest --config ./vitest.config.ts",
