--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
     "declarationMap": true,
     "declaration": true,
     "sourceMap": true,
-    "target": "ES6",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "ESNext",
+    "module": "Node16",
     "jsx": "react",
     "strict": true,
     "removeComments": true,
