--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist/esm",
     "rootDir": "./src",
-    "composite": true,
-    "module": "nodenext",
-    "target": "es2022"
+    "composite": true
   },
   "references": [
     {
