--- a/packages/serializable/tsconfig.json
+++ b/packages/serializable/tsconfig.json
@@ -6,7 +6,11 @@
     "composite": true,
     "jsx": "react"
   },
-  "references": [],
+  "references": [
+    {
+      "path": "../core/tsconfig.json"
+    }
+  ],
   "exclude": [
     "./dist"
   ],
