--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,15 +22,10 @@
   },
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
-  "dependencies": {
-    "hardwired": "0.8.2"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "hardwired": "0.8.2",
+    "hardwired": "0.8.3",
     "react": "^18.2.0"
-  },
-  "devDependencies": {
-    "hardwired": "0.8.2"
   },
   "files": [
     "dist",
