--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ts-expect": "^1.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.34.3",
     "vite": "^4.4.9",
     "vitest": "^0.34.2"
   },
