--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Minimalistic type-safe dependencies container",
   "private": true,
   "scripts": {
-    "start": "tsc -b packages/tsconfig.json --watch --pretty",
+    "start": "tsc -b tsconfig.packages.json --watch --pretty",
     "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc -b packages/tsconfig.json --pretty",
+    "build:esm": "tsc -b tsconfig.packages.json --pretty",
     "build:cjs": "yarn build:cjs:core && yarn build:cjs:react && yarn build:cjs:serializable",
     "build:cjs:core": "cd packages/core && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:react": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
@@ -15,10 +15,8 @@
     "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
     "test": "yarn run vitest --config ./vitest.config.ts",
     "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run",
-    "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
+    "postinstall": "tsm link",
     "prepare": "husky install",
-    "update:tsconfig.json": "node --loader ts-node/esm scripts/update-package-tsconfig.ts",
-    "update:package.json": "node --loader ts-node/esm scripts/update-package-json.ts",
     "purge": "rimraf packages/**/dist/* packages/**/*.tsbuildinfo node_modules packages/**/node_modules",
     "format": "prettier --write 'packages/**/src/**/*.{ts,tsx,js}'",
     "lint": "eslint 'packages/**/*.{!d.ts,ts,tsx}'"
@@ -63,7 +61,8 @@
     "typescript": "^5.2.2",
     "@vitest/coverage-v8": "^0.34.3",
     "vite": "^4.4.9",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.2",
+    "ts-monorepo": "^0.3.0"
   },
   "dependencies": {
     "memoize-one": "^6.0.0",
