--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -5,11 +5,7 @@
     "rootDir": "./src",
     "composite": true
   },
-  "references": [
-    {
-      "path": "../core/tsconfig.json"
-    }
-  ],
+  "references": [],
   "exclude": [
     "./dist"
   ],
