--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -6,11 +6,7 @@
     "composite": true,
     "jsx": "react"
   },
-  "references": [
-    {
-      "path": "../core/tsconfig.json"
-    }
-  ],
+  "references": [],
   "exclude": [
     "./dist"
   ],
