--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,11 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "!/**/__tests__",
+    "!/**/__test__",
+    "!/**/*.test.ts",
+    "!/**/*.test.tsx"
   ],
   "repository": {
     "type": "git",
