Improve hooks integration + add experimental serializable package (#69)
* Bump dependencies

* Add editor config

* [WIP] Add drafts for serializable interceptor

* [WIP] Extract hydratable into separate package

* Use class for instance definition

* Use class for instance definition

* Use class for instance definition

* Change format for esm exports

* Renaming

* [WIP] Working on reliable polyfill

* Bump TypeScript version

* Add missing test assertion

* Add parentId property do the container class

* [WIP] Simplify hooks rules

* Simplify hooks rules

* [WIP] Rename hydration -> serializable

* Add a hint message describing which file was failed to parse.

* Rename package hydration -> serializable

* Add publishing of hooks and serializable packages

* Rename package dir

* Cleanup

* Bump version

* Update node versions matrix

* Include peerDependencies for updating project references

* Cleanup dependencies

* Migrate to @vitest/coverage-v8

* Bump GH actions versions

* Use ts-monorepo for updating project references

* Exclude test files and set more strict versions for internal dependencies

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,10 +12,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x, 19.x]
+        node-version: [16.x, 18.x, 19.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
@@ -41,12 +41,12 @@ jobs:
     if: github.ref == 'refs/heads/master'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
 
       - run: yarn install
       - run: yarn build
@@ -65,3 +65,15 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           package: packages/react/package.json
+
+      - name: Publish hooks addon
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/hooks/package.json
+
+      - name: Publish serializable addon
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/serializable/package.json
