--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "description": "Minimalistic type-safe dependencies container",
   "private": true,
   "scripts": {
-    "start": "tsc -b packages/tsconfig.json --watch --pretty",
+    "start": "tsc -b tsconfig.packages.json --watch --pretty",
     "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc -b packages/tsconfig.json --pretty",
-    "build:cjs": "yarn build:cjs:core && yarn build:cjs:react",
+    "build:esm": "tsc -b tsconfig.packages.json --pretty",
+    "build:cjs": "yarn build:cjs:core && yarn build:cjs:react && yarn build:cjs:serializable",
     "build:cjs:core": "cd packages/core && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:react": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
-    "build:cjs:clear": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
+    "build:cjs:serializable": "cd packages/serializable && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:prepublish": "node --loader ts-node/esm scripts/prepublish.ts",
     "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
     "test": "yarn run vitest --config ./vitest.config.ts",
     "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run",
-    "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
+    "postinstall": "tsm link",
     "prepare": "husky install",
-    "update:tsconfig.json": "node --loader ts-node/esm scripts/update-package-tsconfig.ts",
-    "update:package.json": "node --loader ts-node/esm scripts/update-package-json.ts",
     "purge": "rimraf packages/**/dist/* packages/**/*.tsbuildinfo node_modules packages/**/node_modules",
     "format": "prettier --write 'packages/**/src/**/*.{ts,tsx,js}'",
     "lint": "eslint 'packages/**/*.{!d.ts,ts,tsx}'"
@@ -40,30 +38,31 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/airbnb__node-memwatch": "^2.0.0",
-    "@types/node": "^18.7.1",
-    "@types/react": "^18.0.6",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "c8": "^7.12.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.24.0",
-    "happy-dom": "^8.9.0",
+    "@types/node": "^20.5.3",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "happy-dom": "^10.11.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.2",
-    "prettier": "^2.6.2",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^4.3.1",
+    "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
     "ts-expect": "^1.3.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@vitest/coverage-c8": "^0.29.2",
-    "vite": "^4.1.4",
-    "vitest": "^0.29.2"
+    "typescript": "^5.2.2",
+    "@vitest/coverage-v8": "^0.34.3",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2",
+    "ts-monorepo": "^0.3.4"
   },
   "dependencies": {
     "memoize-one": "^6.0.0",
