--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardwired-hooks",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "Minimalistic, type-safe dependency injection solution for TypeScript",
   "author": "Tomasz Robaczewski <robak86@gmail.com>",
   "license": "MIT",
@@ -14,20 +14,26 @@
   ],
   "type": "module",
   "exports": {
-    "default": "./dist/esm/index.js",
-    "import": "./dist/esm/index.js",
-    "types": "./dist/esm/index.d.ts",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "default": "./dist/esm/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts",
+      "require": "./dist/cjs/index.js"
+    },
+    "./polyfill": "./dist/esm/polyfill/async_hooks.js"
   },
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
-  "dependencies": {
-    "hardwired": "0.8.2"
+  "peerDependencies": {
+    "hardwired": "0.8.3"
   },
-  "devDependencies": {},
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "!/**/__tests__",
+    "!/**/__test__",
+    "!/**/*.test.ts",
+    "!/**/*.test.tsx"
   ],
   "repository": {
     "type": "git",
