--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardwired-react",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "author": "Tomasz Robaczewski <robak86@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/robak86/hardwired",
@@ -13,22 +13,19 @@
   ],
   "type": "module",
   "exports": {
-    "default": "./dist/esm/index.js",
-    "import": "./dist/esm/index.js",
-    "types": "./dist/esm/index.d.ts",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "default": "./dist/esm/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts",
+      "require": "./dist/cjs/index.js"
+    }
   },
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
-  "dependencies": {
-    "hardwired": "0.8.2"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "hardwired": "0.8.2",
+    "hardwired": "0.8.3",
     "react": "^18.2.0"
-  },
-  "devDependencies": {
-    "hardwired": "0.8.2"
   },
   "files": [
     "dist",
