--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "@typescript-eslint/no-namespace": 0,
     "@typescript-eslint/no-empty-function": 0,
-    "@typescript-eslint/ban-types": 0
+    "@typescript-eslint/ban-types": 0,
+    "react/react-in-jsx-scope": "off"
   },
   "ignorePatterns": ["node_modules", "**/lib/**/*.js"]
 }
