--- a/packages/react-example/tsconfig.json
+++ b/packages/react-example/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist/esm",
     "rootDir": "./src",
     "composite": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
