--- a/packages/serializable/tsconfig.json
+++ b/packages/serializable/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "./dist/esm",
     "rootDir": "./src",
     "composite": true,
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true
   },
   "references": [],
   "exclude": [
