Add codecov token explicitly

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -31,6 +31,7 @@ jobs:
           files: ./coverage/clover.xml
           fail_ci_if_error: true
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }} # required
 
   publish:
     runs-on: ubuntu-latest
