--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
-    "performance-now": "^2.1.0"
+    "tinybench": "^2.7.0"
   },
   "files": [
     "dist",
