--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:cjs:prepublish": "node --loader ts-node/esm scripts/prepublish.ts",
     "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
     "test": "yarn run vitest --config ./vitest.config.ts",
-    "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run",
+    "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run --coverage.exclude=packages/core/src/__test__",
     "postinstall": "tsm link",
     "prepare": "husky install",
     "purge": "rimraf packages/**/dist/* packages/**/*.tsbuildinfo node_modules packages/**/node_modules",
