Add correct devDependencies so post-script creates correct tsconfig.packages.json

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -7,7 +7,11 @@
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true
   },
-  "references": [],
+  "references": [
+    {
+      "path": "../core/tsconfig.json"
+    }
+  ],
   "exclude": [
     "./dist"
   ],
