--- a/tsconfig.packages.json
+++ b/tsconfig.packages.json
@@ -3,6 +3,9 @@
   "files": [],
   "references": [
     {
+      "path": "packages/circuit/tsconfig.json"
+    },
+    {
       "path": "packages/core/tsconfig.json"
     },
     {
