--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -27,6 +27,9 @@
   "peerDependencies": {
     "hardwired": "0.9.0"
   },
+  "devDependencies": {
+    "hardwired": "0.9.0"
+  },
   "files": [
     "dist",
     "README.md",
