--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -5,7 +5,11 @@
     "rootDir": "./src",
     "composite": true
   },
-  "references": [],
+  "references": [
+    {
+      "path": "../core/tsconfig.json"
+    }
+  ],
   "exclude": [
     "./dist"
   ],
