--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,9 @@
     "hardwired": "0.9.0",
     "react": "^18.2.0"
   },
+  "devDependencies": {
+    "hardwired": "0.9.0"
+  },
   "files": [
     "dist",
     "README.md",
