--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardwired-react",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "author": "Tomasz Robaczewski <robak86@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/robak86/hardwired",
@@ -24,8 +24,11 @@
   "types": "./dist/cjs/index.d.ts",
   "dependencies": {},
   "peerDependencies": {
-    "hardwired": "0.9.0",
+    "hardwired": "0.9.1",
     "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "hardwired": "0.9.1"
   },
   "files": [
     "dist",
