--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,9 @@
     "@typescript-eslint/no-empty-function": 0,
     "@typescript-eslint/ban-types": 0,
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-this-alias": 0
+    "@typescript-eslint/no-this-alias": 0,
+    "@typescript-eslint/no-unsafe-declaration-merging": 0,
+    "@typescript-eslint/ban-ts-comment": 0
   },
   "ignorePatterns": ["node_modules", "**/lib/**/*.js"]
 }
