Remove unused constants

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "target": "ESNext",
     "module": "Node16",
+    "noUnusedLocals": true,
     "jsx": "react-jsx", // support JSX
     "strict": true,
     "removeComments": true,
