--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,8 @@
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-this-alias": 0,
     "@typescript-eslint/no-unsafe-declaration-merging": 0,
-    "@typescript-eslint/ban-ts-comment": 0
+    "@typescript-eslint/ban-ts-comment": 0,
+    "@typescript-eslint/no-misused-new": 0
   },
   "ignorePatterns": ["node_modules", "**/lib/**/*.js"]
 }
