--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run --coverage.exclude=packages/core/src/__test__",
     "postinstall": "tsm link",
     "prepare": "husky install",
-    "purge": "rimraf packages/**/dist/* packages/**/*.tsbuildinfo node_modules packages/**/node_modules",
+    "purge": "rimraf packages/**/lib/* packages/**/dist/* packages/**/*.tsbuildinfo node_modules packages/**/node_modules",
     "format": "prettier --write 'packages/**/src/**/*.{ts,tsx,js}'",
     "lint": "eslint 'packages/**/*.{!d.ts,ts,tsx}'"
   },
@@ -57,7 +57,7 @@
     "source-map-support": "^0.5.21",
     "ts-expect": "^1.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "@vitest/coverage-v8": "^1.5.0",
     "vite": "^5.2.8",
     "vitest": "^1.5.0",
