--- a/package.json
+++ b/package.json
@@ -58,13 +58,11 @@
     "ts-expect": "^1.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "@vitest/coverage-v8": "^1.5.0",
+    "@vitest/coverage-v8": "^2.1.2",
     "vite": "^5.2.8",
-    "vitest": "^2.1.1",
-    "ts-monorepo": "^0.3.4"
-  },
-  "dependencies": {
-    "memoize-one": "^6.0.0",
+    "vitest": "^2.1.2",
+    "ts-monorepo": "^0.3.4",
     "utility-types": "^3.11.0"
-  }
+  },
+  "dependencies": {}
 }
