--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,7 +25,7 @@
   "dependencies": {},
   "peerDependencies": {
     "hardwired": "1.4.0",
-    "react": "^18.2.0"
+    "react": "^18 || ^19"
   },
   "devDependencies": {
     "hardwired": "1.4.0"
