--- a/tsconfig.packages.json
+++ b/tsconfig.packages.json
@@ -6,6 +6,9 @@
       "path": "packages/core/tsconfig.json"
     },
     {
+      "path": "packages/examples/tsconfig.json"
+    },
+    {
       "path": "packages/react/tsconfig.json"
     }
   ]
